<resources>

    <string name="app_name">Security Assistant</string>
    <string name="app_slogan">Be Aware, Be Secure</string>

    <!-- Preference keys -->
    <string name="settings_disable_camera">setttings_disable_camera</string>
    <string name="settings_encrypt_device">settings_encrypt_device</string>
    <string name="settings_secured_wifis">settings_secured_wifis</string>
    <string name="settings_screen_timeout">settings_screen_timeout</string>
    <string name="settings_failed_password">settings_failed_password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Page title -->
    <string name="home_page_title">Home</string>
    <string name="appscan_page_title">App Scan</string>
    <string name="settings_page_title">Settings</string>
    <string name="about_page_title">About</string>

    <!-- Drawer menu list -->
    <string name="header_image_content_description">Header image</string>

    <string name="malware_scan_results_textview">Potential Malware Apps</string>
    <string name="security_misconfigurations_textview">Security Settings Recommendations</string>

    <!-- Messages -->
    <string name="ok_button">OK</string>
    <string name="disable_camera_update_msg">Device cameras have been disabled!</string>
    <string name="enable_camera_update_msg">Device cameras have been enabled!</string>
    <string name="admin_request_msg">The app requires Adminitrator Rights in order to properly function</string>
    <string name="no_scan_results_msg">No potential malware apps found</string>
    <string name="scanning_msg">Scanning&#8230;</string>
    <string name="perform_scan_msg">Perform scan for results</string>
    <string name="encryption_msg_title">Encryption Status</string>
    <string name="encryption_not_supported_msg">File system encryption is not supported</string>
    <string name="encryption_active_msg">File system is already encrypted or is being encrypted</string>

    <!-- Notifications -->
    <string name="notification_unsecured_wifi_title">Unsecured WiFi</string>
    <string name="notification_unsecured_wifi_msg">Device is connected to an unsecured access point!</string>

    <string name="about_page_text">Security Assistant</string>

</resources>
