<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:id="@+id/checkbox_disable_camera"
        android:title="Disable cameras"
        android:summary="Disables all cameras on the device. When cameras are disabled, no applications running will be able to access any cameras on the device"
        android:key="@string/settings_disable_camera" />
    <CheckBoxPreference
        android:title="Encrypt device"
        android:summary="Starts the encryption wizard if device is not encrypted"
        android:key="@string/settings_encrypt_device" />
    <CheckBoxPreference
        android:title="Notify of unsecured access points"
        android:summary="Notify user when device connects to unsecured access points"
        android:key="@string/settings_secured_wifis" />
    <ListPreference
        android:title="Set maximum lock screen timeout"
        android:summary="Sets maximum length of time since the user last touched the screen or pressed a button before the device locks the screen"
        android:key="@string/settings_screen_timeout"
        android:entries="@array/screen_timeout_entries"
        android:entryValues="@array/screen_timeout_values" />
    <ListPreference
        android:title="Set maximum failed password attempts"
        android:summary="Specifies how many times a user can enter the wrong password before the device wipes its data"
        android:key="@string/settings_failed_password"
        android:entries="@array/reset_password_entries"
        android:entryValues="@array/reset_password_values" />
</PreferenceScreen>